--- a/01. Partie législative/Article 28 - 6523819.md
+++ b/01. Partie législative/Article 28 - 6523819.md
@@ -1,14 +1,7 @@
 # Article 28
 
-Dès que le capitaine a connaissance d'un crime, d'un délit ou d'une contravention commis à bord, il procède à une enquête
-préliminaire conformément aux dispositions du titre II du livre Ier du Code de procédure pénale. Les circonstances du crime,
-du délit ou de la contravention et les énonciations du procès-verbal de l'enquête préliminaire sont mentionnées au livre de
-discipline. 
-
-En cas de nécessité, le capitaine peut faire arrêter préventivement la personne mise en examen. S'il s'agit d'un mineur de
-dix-huit ans, ce dernier devra, dans ce cas, être séparé de tous autres détenus. L'emprisonnement préventif est subordonné à
-l'observation des règles prévues aux deuxième et troisième alinéas de l'article 8. L'imputation de la détention préventive
-sur la durée de la peine est de droit, sauf décision contraire de la juridiction compétente.
+Le capitaine prend toutes mesures nécessaires et adaptées en vue d'assurer la préservation du navire et de sa cargaison et la
+sécurité des personnes se trouvant à bord.
 
 **Liens relatifs à cet article**
 
@@ -19,12 +12,8 @@ sur la durée de la peine est de droit, sauf décision contraire de la juridicti
 
 	**Modifié par**:
 
-	  - Loi n°93-1013 1993-08-24 art. 46 JORF 25 août 1993 en vigueur le 2 septembre 1993
+	  - Loi n°2008-324 du 7 avril 2008 - art. 4
 
-	**Cite**:
+	**Abrogé par**:
 
-	  - Code disciplinaire et pénal de la marine marchande 8 al. 2 et al. 3
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 12
