--- a/01. Partie législative/Article 29 - 6523821.md
+++ b/01. Partie législative/Article 29 - 6523821.md
@@ -1,14 +1,23 @@
 # Article 29
 
-Le capitaine adresse sa plainte et les pièces de l'enquête préliminaire à l'administration des affaires maritimes du premier
-port où le bâtiment fait escale.
+A la demande du procureur de la République compétent au titre de l'article 37 ou avec son accord, le capitaine peut ordonner
+la consignation dans un lieu fermé, pendant la durée strictement nécessaire, d'une personne mettant en péril la préservation
+du navire, de sa cargaison ou de la sécurité des personnes se trouvant à bord lorsque les aménagements du navire le
+permettent. Le mineur doit être séparé de toute autre personne consignée. 
 
-**Nota:**
-
-Intitulé du titre III modifié par la loi 62-899 1962-08-04 art. 3. *]
+En cas d'urgence, la consignation est immédiatement ordonnée par le capitaine. Il informe dès le début de celle-ci le
+procureur compétent afin de recueillir son accord.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Loi n°1926-12-17
+	  - Loi n°2008-324 du 7 avril 2008 - art. 4
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 15
+
+	**Cite**:
+
+	  - Code disciplinaire et pénal de la marine marchande. - art. 37
