--- a/01. Partie législative/Article 39 - 6523838.md
+++ b/01. Partie législative/Article 39 - 6523838.md
@@ -8,25 +8,20 @@ motifs pour lesquels le poste auquel était affecté le marin constituait un pos
 
 Lorsque le contrat d'engagement a été conclu à durée déterminée ou indéterminée et que le délai de préavis est expiré, le
 marin doit être relevé du poste qu'il occupe de manière à pouvoir quitter librement le bord. Le capitaine qui aura négligé de
-le relever est puni des peines prévues par le paragraphe 1er de l'article 42 ci-après, et il en est de même, quelle que soit
-la forme du contrat d'engagement, dans le cas prévu par l'article 98, paragraphe 2, du code du travail maritime.
+le relever est puni des peines prévues par le paragraphe 1er de l'article 42 ci-après.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
-
-	  - SPEC_APPLI: Ordonnance n°96-267 du 28 mars 1996 - art. 13 (M)
-
 	**Modifié par**:
 
-	  - Loi n°2002-73 du 17 janvier 2002 - art. 208 () JORF 18 janvier 2002
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
 
 	**Cite**:
 
 	  - Code disciplinaire et pénal de la marine marchande - art. 36 (V)
 	  - Code disciplinaire et pénal de la marine marchande - art. 42 (M)
 	  - Code disciplinaire et pénal de la marine marchande 36, 42, 98
-
-	**Codifié par**:
-
-	  - Loi n°1926-12-17
